@@ -1,3 +1,6 @@
+2016-09-09  Kirit Saelensminde  <kirit@felspar.com>
+ Handle setting MIME headers via JSON.
+
 2016-08-08  Kirit Saelensminde  <kirit@felspar.com>
  Swap a `std::list` for a `std::vector` in the query string interface.
 
